Fixed the my github Profile button alignment

--- a/styles.css
+++ b/styles.css
@@ -60,8 +60,8 @@ li:hover, a:hover{
   transition: background-color 0.25s;
   position: absolute;
   bottom: 20px;
-  left: 40%;
-  right: 40%;
+  left: 40px;
+  margin: 20px auto;
 }
 .github-button svg{
   fill: white;
